--- a/surveyapp/src/App.css
+++ b/surveyapp/src/App.css
@@ -4,22 +4,25 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
 .App-header {
   background-color: whitesmoke;
+  height: 120px;
   width: 100%;
-  text-align: left;
+  text-align: center;
+  border-bottom: 3px solid black;
 }
 
 .Header-text {
+  margin-top: 0px;
+  padding-top: 25px;
   color: #3f3f3f;
-  padding-left: 10px;
 }
 
-.Recaptha {
-  margin: auto;
+.Survey {
+  width: 100%;
+  text-align: left;
 }
